--- a/src/app/rodada/rodada3/rodada3.component.html
+++ b/src/app/rodada/rodada3/rodada3.component.html
@@ -3,23 +3,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[0])]"></span>{{grupoA[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[0])]"></span>{{grupoA[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoA[0].g3"
                             (change)="mudaResultadoR3(grupoA[0],grupoA[3],3,'A')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoA[3].g3"
                             (change)="mudaResultadoR3(grupoA[0],grupoA[3],3,'A')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[3])]"></span>{{grupoA[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[3])]"></span>{{grupoA[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[1])]"></span>{{grupoA[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[1])]"></span>{{grupoA[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoA[1].g3"
                             (change)="mudaResultadoR3(grupoA[1],grupoA[2],3,'A')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoA[2].g3"
                             (change)="mudaResultadoR3(grupoA[1],grupoA[2],3,'A')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[2])]"></span>{{grupoA[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoA[2])]"></span>{{grupoA[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -30,23 +30,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[0])]"></span>{{grupoB[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[0])]"></span>{{grupoB[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoB[0].g3"
                             (change)="mudaResultadoR3(grupoB[0],grupoB[3],3,'B')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoB[3].g3"
                             (change)="mudaResultadoR3(grupoB[0],grupoB[3],3,'B')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[3])]"></span>{{grupoB[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[3])]"></span>{{grupoB[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[1])]"></span>{{grupoB[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[1])]"></span>{{grupoB[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoB[1].g3"
                             (change)="mudaResultadoR3(grupoB[1],grupoB[2],3,'B')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoB[2].g3"
                             (change)="mudaResultadoR3(grupoB[1],grupoB[2],3,'B')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[2])]"></span>{{grupoB[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoB[2])]"></span>{{grupoB[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -57,23 +57,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[0])]"></span>{{grupoC[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[0])]"></span>{{grupoC[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoC[0].g3"
                             (change)="mudaResultadoR3(grupoC[0],grupoC[3],3,'C')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoC[3].g3"
                             (change)="mudaResultadoR3(grupoC[0],grupoC[3],3,'C')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[3])]"></span>{{grupoC[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[3])]"></span>{{grupoC[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[1])]"></span>{{grupoC[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[1])]"></span>{{grupoC[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoC[1].g3"
                             (change)="mudaResultadoR3(grupoC[1],grupoC[2],3,'C')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoC[2].g3"
                             (change)="mudaResultadoR3(grupoC[1],grupoC[2],3,'C')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[2])]"></span>{{grupoC[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoC[2])]"></span>{{grupoC[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -84,23 +84,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[0])]"></span>{{grupoD[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[0])]"></span>{{grupoD[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoD[0].g3"
                             (change)="mudaResultadoR3(grupoD[0],grupoD[3],3,'D')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoD[3].g3"
                             (change)="mudaResultadoR3(grupoD[0],grupoD[3],3,'D')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[3])]"></span>{{grupoD[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[3])]"></span>{{grupoD[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[1])]"></span>{{grupoD[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[1])]"></span>{{grupoD[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoD[1].g3"
                             (change)="mudaResultadoR3(grupoD[1],grupoD[2],3,'D')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoD[2].g3"
                             (change)="mudaResultadoR3(grupoD[1],grupoD[2],3,'D')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[2])]"></span>{{grupoD[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoD[2])]"></span>{{grupoD[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -111,23 +111,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[0])]"></span>{{grupoE[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[0])]"></span>{{grupoE[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoE[0].g3"
                             (change)="mudaResultadoR3(grupoE[0],grupoE[3],3,'E')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoE[3].g3"
                             (change)="mudaResultadoR3(grupoE[0],grupoE[3],3,'E')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[3])]"></span>{{grupoE[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[3])]"></span>{{grupoE[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[1])]"></span>{{grupoE[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[1])]"></span>{{grupoE[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoE[1].g3"
                             (change)="mudaResultadoR3(grupoE[1],grupoE[2],3,'E')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoE[2].g3"
                             (change)="mudaResultadoR3(grupoE[1],grupoE[2],3,'E')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[2])]"></span>{{grupoE[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoE[2])]"></span>{{grupoE[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -138,23 +138,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[0])]"></span>{{grupoF[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[0])]"></span>{{grupoF[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoF[0].g3"
                             (change)="mudaResultadoR3(grupoF[0],grupoF[3],3,'F')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoF[3].g3"
                             (change)="mudaResultadoR3(grupoF[0],grupoF[3],3,'F')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[3])]"></span>{{grupoF[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[3])]"></span>{{grupoF[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[1])]"></span>{{grupoF[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[1])]"></span>{{grupoF[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoF[1].g3"
                             (change)="mudaResultadoR3(grupoF[1],grupoF[2],3,'F')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoF[2].g3"
                             (change)="mudaResultadoR3(grupoF[1],grupoF[2],3,'F')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[2])]"></span>{{grupoF[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoF[2])]"></span>{{grupoF[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -165,23 +165,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[0])]"></span>{{grupoG[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[0])]"></span>{{grupoG[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoG[0].g3"
                             (change)="mudaResultadoR3(grupoG[0],grupoG[3],3,'G')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoG[3].g3"
                             (change)="mudaResultadoR3(grupoG[0],grupoG[3],3,'G')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[3])]"></span>{{grupoG[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[3])]"></span>{{grupoG[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[1])]"></span>{{grupoG[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[1])]"></span>{{grupoG[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoG[1].g3"
                             (change)="mudaResultadoR3(grupoG[1],grupoG[2],3,'G')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoG[2].g3"
                             (change)="mudaResultadoR3(grupoG[1],grupoG[2],3,'G')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[2])]"></span>{{grupoG[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoG[2])]"></span>{{grupoG[2].sigla}}</label>
                      <hr>
               </div>
        </div>
@@ -192,23 +192,23 @@
        <div class="grupos-conteudos-confrontos">
               <div class="grupos-rodadas-confrontos">
                      <hr>
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[0])]"></span>{{grupoH[0].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[0])]"></span>{{grupoH[0].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoH[0].g3"
                             (change)="mudaResultadoR3(grupoH[0],grupoH[3],3,'H')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoH[3].g3"
                             (change)="mudaResultadoR3(grupoH[0],grupoH[3],3,'H')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[3])]"></span>{{grupoH[3].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[3])]"></span>{{grupoH[3].sigla}}</label>
               </div>
 
               <div class="grupos-rodadas-confrontos">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[1])]"></span>{{grupoH[1].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[1])]"></span>{{grupoH[1].sigla}}</label>
                      <input class="col-1" [(ngModel)]="grupoH[1].g3"
                             (change)="mudaResultadoR3(grupoH[1],grupoH[2],3,'H')" type="text" min="0"> <span
                             class="grupos-rodadas-confrontos-x">X</span>
                      <input class="col-1" [(ngModel)]="grupoH[2].g3"
                             (change)="mudaResultadoR3(grupoH[1],grupoH[2],3,'H')" type="text" min="0">
-                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[2])]"></span>{{grupoH[2].nome}}</label>
+                     <label class="col-4 text-center" for=""><span [ngClass]="[carregaFlag(grupoH[2])]"></span>{{grupoH[2].sigla}}</label>
                      <hr>
               </div>
        </div>
