Fazendo a tabela das oitavas

--- a/src/app/mata-mata/oitavas-de-final/oitavas-de-final.component.html
+++ b/src/app/mata-mata/oitavas-de-final/oitavas-de-final.component.html
@@ -1,4 +1,4 @@
-<p>{{oitavas1.nome}}</p>
+<!-- <p>{{oitavas1.nome}}</p>
 <p>{{oitavas2.nome}}</p>
 <p>{{oitavas3.nome}}</p>
 <p>{{oitavas4.nome}}</p>
@@ -13,4 +13,4 @@
 <p>{{oitavas13.nome}}</p>
 <p>{{oitavas14.nome}}</p>
 <p>{{oitavas15.nome}}</p>
-<p>{{oitavas16.nome}}</p>
+<p>{{oitavas16.nome}}</p> -->
