Adicionando esboco de confrontos

--- a/src/app/mata-mata/mata-mata.component.html
+++ b/src/app/mata-mata/mata-mata.component.html
@@ -1,1 +1,7 @@
-<p>mata-mata works!</p>
+<div class="row">
+    <div class="col-6">
+        <div class="card col-4">
+            <span style="padding:30px"[ngClass]="[carregaFlagBorder(oitavas1)]"></span>
+        </div>
+    </div>
+</div>
