--- a/src/app/rodada/rodada1/rodada1.component.css
+++ b/src/app/rodada/rodada1/rodada1.component.css
@@ -1,4 +1,6 @@
-.grupos-rodadas{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
+
+.grupos-rodadas {
     height: 206px;
     display: flex;
     flex-direction: column;
@@ -9,20 +11,22 @@
     border-left: 1px solid #e3e3e3;
 }
 
-.grupos-conteudos-confrontos{
-  
+.grupos-conteudos-confrontos {
+
 }
 
-.grupos-rodadas-confrontos{
+.grupos-rodadas-confrontos {
     width: 100%;
     height: 103px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
+    font-weight: 500;
     border-bottom: 1px solid #e3e3e3;
 }
 
-.grupos-rodadas-confrontos-x{
+.grupos-rodadas-confrontos-x {
     margin: 0 5px;
 }
