Logica das oitavas de final

--- a/src/app/mata-mata/mata-mata.component.html
+++ b/src/app/mata-mata/mata-mata.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-6">
         <div class="card col-2">
-            <span style="padding:30px" [ngClass]="[carregaFlagBorder(oitavas1)]"></span>
+            <span style="padding:30px" [ngClass]="[carregaFlagBorder(oitavas1)]" (click)="classificaEquipe('quartas',1)"></span>
             <br>
-            <span style="padding:30px" [ngClass]="[carregaFlagBorder(oitavas2)]"></span>
+            <span style="padding:30px" [ngClass]="[carregaFlagBorder(oitavas2)]" (click)="classificaEquipe('quartas',2)"></span>
         </div>
     </div>
 </div>
