Estilizando fase de grupos

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,8 +19,10 @@
 
 .fa-angles-right{
     font-size: 30px;
+    color: #d3a02c;
 }
 
 .fa-angles-left{
     font-size: 30px;
+    color: #d3a02c;
 }
