ajustando logica do mata mata

--- a/src/app/mata-mata/mata-mata.component.html
+++ b/src/app/mata-mata/mata-mata.component.html
@@ -1,9 +1,77 @@
 <div class="row">
-    <div class="col-6">
-        <div class="card col-2">
-            <span style="padding:30px" [ngClass]="[carregaFlagBorder(oitavas1)]" (click)="classificaEquipeQuartas('quartas',1,oitavas1)"></span>
-            <br>
-            <span style="padding:30px" [ngClass]="[carregaFlagBorder(oitavas2)]" (click)="classificaEquipeQuartas('quartas',2,oitavas2)"></span>
+    <div class="col-md-5">
+        <div class="row">
+
+            <div class="col-md-3">
+                <span [ngClass]="[carregaFlagBorder(oitavas1)]" (click)="classificaEquipeQuartas(1,oitavas1)"></span>
+                <br>
+                <label>{{oitavas1.sigla}}</label>
+                <br>
+                <span [ngClass]="[carregaFlagBorder(oitavas2)]" (click)="classificaEquipeQuartas(1,oitavas2)"></span>
+                <br>
+                <label>{{oitavas2.sigla}}</label>
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(oitavas3)]" (click)="classificaEquipeQuartas(2,oitavas3)"></span>
+                <br>
+                <label>{{oitavas3.sigla}}</label>
+                <br>
+                <span [ngClass]="[carregaFlagBorder(oitavas4)]" (click)="classificaEquipeQuartas(2,oitavas4)"></span>
+                <br>
+                <label>{{oitavas4.sigla}}</label>
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(oitavas5)]" (click)="classificaEquipeQuartas(3,oitavas5)"></span>
+                <br>
+                <label>{{oitavas5.sigla}}</label>
+                <br>
+                <span [ngClass]="[carregaFlagBorder(oitavas6)]" (click)="classificaEquipeQuartas(3,oitavas6)"></span>
+                <br>
+                <label>{{oitavas6.sigla}}</label>
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(oitavas7)]" (click)="classificaEquipeQuartas(4,oitavas7)"></span>
+                <br>
+                <label>{{oitavas7.sigla}}</label>
+                <br>
+                <span [ngClass]="[carregaFlagBorder(oitavas8)]" (click)="classificaEquipeQuartas(4,oitavas8)"></span>
+                <br>
+                <label>{{oitavas8.sigla}}</label>
+                <hr>
+            </div>
+            <div style="margin-top: 40px;" class="col-md-3">
+                <span [ngClass]="[carregaFlagBorder(quartas1)]" (click)="classificaEquipeSemi(1,quartas1)"></span>
+                <br>
+                <label>{{quartas1.sigla}}</label>
+                
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(quartas2)]" (click)="classificaEquipeSemi(1,quartas2)"></span>
+                <br>
+                <label>{{quartas2.sigla}}</label>
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(quartas3)]" (click)="classificaEquipeSemi(2,quartas3)"></span>
+                <br>
+                <label>{{quartas3.sigla}}</label>
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(quartas4)]" (click)="classificaEquipeSemi(2,quartas4)"></span>
+                <br>
+                <label>{{quartas4.sigla}}</label>
+            </div>
+
+            <div style="margin-top: 80px;" class="col-md-3">
+                <span [ngClass]="[carregaFlagBorder(semi1)]" (click)="defineFinalistas(1,semi1)"></span>
+                <br>
+                <label>{{semi1.sigla}}</label>
+                <hr>
+
+                <span [ngClass]="[carregaFlagBorder(semi2)]" (click)="defineFinalistas(1,semi2)"></span>
+                <br>
+                <label>{{semi2.sigla}}</label>
+                <hr>
+            </div>
         </div>
     </div>
 </div>
